[gd_scene load_steps=3 format=3 uid="uid://cwx0fi4ys3b2k"]

[ext_resource type="Script" uid="uid://c8ur2uumc45us" path="res://Scenes/weapon_list_item.gd" id="1_1sh45"]
[ext_resource type="Theme" uid="uid://dbpnpas2onmlg" path="res://UI/font theme.tres" id="2_ph1v8"]

[node name="WeaponListItem" type="GridContainer"]
offset_right = 2929.0
offset_bottom = 96.0
size_flags_horizontal = 3
columns = 12
script = ExtResource("1_1sh45")

[node name="NameLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Weapon"
fit_content = true
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Type"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="RegionLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Region"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="RefinementLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Refinement"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat1TypeLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Stat Type"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat1ValueLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Stat Value"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat2TypeLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Stat Type"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat2ValueLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Stat value"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat3TypeLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Stat Type"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat3ValueLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Stat Value"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
bbcode_enabled = true
text = "Effect"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="EquipCheck" type="CheckBox" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_stretch_ratio = 8.94
theme = ExtResource("2_ph1v8")
theme_override_constants/outline_size = 20
text = "Equipped?"
icon_alignment = 1
expand_icon = true
